Fix tooltip z-index order and character sidebar min-width

--- a/src/styles/Character.css
+++ b/src/styles/Character.css
@@ -9,7 +9,7 @@
 .character__side {
     display: flex;
     flex-direction: column;
-    max-width: 30rem;
+    min-width: 30rem;
 }
 
 .character__main {
@@ -102,7 +102,7 @@
     }
 
     .character__side {
-        max-width: none;
+        min-width: auto;
     }
     
 }
