--- a/src/styles/Item.css
+++ b/src/styles/Item.css
@@ -18,7 +18,7 @@
 }
 
 .tooltip {
-    z-index: 3;
+    z-index: 4;
     display: flex;
     gap: .5rem;
     flex-direction: column;
